--- a/index.html
+++ b/index.html
@@ -126,5 +126,60 @@
 			<p id="code">	}</p>
 		</div>
 	</div>
+	<div class="container_12">
+		<div class="grid_12">
+			<h1 id="projects-heading">Projects</h1>
+		</div>
+		<div class="first-project grid_6">
+			<a id="first-project-title" href="https://github.com/GregFuntera/Face-Recognition-for-Motorcycle-Engine-Ignition-with-Messaging-System/wiki" target="_blank"><p id="thesis-title">
+				" Face Recognition<br>
+						for<br>
+				Motorcycle Engine Ignition<br>
+						with<br>
+					Messaging System "
+			</p></a>
+			<a
+			href="https://github.com/GregFuntera/Face-Recognition-for-Motorcycle-Engine-Ignition-with-Messaging-System/wiki" target="_blank"><p id="thesis-authors">
+				John Gregory Funtera<br>
+				Shawn Garcia<br>
+				Jonet Montenegro<br>
+				Laymar Santelices<br>
+			</p>
+			<img src="images/github.png"></a>
+		</div>
+		<div class="grid_6">
+			<p class="project-description">
+				<span id="project-font">A</span>n efficient automotive security system is implemented for anti-theft using an embedded system for starting the engine by the use of face recognition and integrated with Global Positioning System (GPS) and Global System for Mobile Communication (GSM). This proposed work is an attempt to design and develop a smart anti-theft system that uses Face recognition, GPS and GSM system to prevent theft and to determine the exact location of vehicle.
+			</p>
+		</div>
+	</div>
+	<div class="container_12">
+		<div class="app-project grid_6">
+			<img src="images/fun-over-math.png">
+			<a href="https://play.google.com/store/apps/details?id=com.androidprojects.greggy.funmath" target="_blank">
+			<p id="app-title">Fun Over Math</p>
+			<p id="app-author">Greg Funtera
+			</p>
+				<img src="images/play-store-bagdge.png">
+			</a>
+		</div>
+		<div class="grid_6">
+			<p class="app-project-description">
+				<span id="project-font">T</span>he application is a game that will help to improve arithmetic and cognitive skills. A question will be given and should be answered before the time ends. There three categories to choose from (Addition, Subtraction and Multiplication). A question will be shown and should choose the correct answer if chosen a wrong answer it will be automatically Game Over. A highscore option is also available to each of the categories. Also tutorial is also available for first time users.
+			</p>
+		</div>
+		<div class="ending grid_12">
+			<p>To be continued...</p>
+		</div>
+		<div class="footer grid_12">
+				<p>
+					<span id="footer-email">Email</span>: greg.funtera@gmail.com
+				</p>
+				<p>
+					<span id="footer-contact">Contact No</span>: +639-0560-75276 
+					<span id="copyright">&copy; J.G.F 2017</span>
+				</p>
+		</div>
+	</div>
 </body>
 </html>
